--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,28 +1,11 @@
 ---
 deployment:
-  tasks:
-    # Deploy the website to public_html
-    - export DEPLOYPATH=/home/wshaoen/public_html/
-    
-    # Create backup of existing files (if any)
-    - /bin/cp -R ${DEPLOYPATH} ${DEPLOYPATH}.backup
-    
-    # Clean the deployment directory
-    - /bin/rm -rf ${DEPLOYPATH}/*
-    
-    # Deploy the build files
-    # First, build your React application locally
-    - /bin/npm install     # Install dependencies
-    - /bin/npm run build   # Build the application
-    
-    # Copy the built files to the deployment path
-    - /bin/cp -R ./dist/* ${DEPLOYPATH}
-    
-    # Copy other necessary files
-    - /bin/cp .htaccess ${DEPLOYPATH}
-    - /bin/cp robots.txt ${DEPLOYPATH}
-    
-    # Set proper permissions
-    - /bin/chmod 755 ${DEPLOYPATH}
-    - /bin/find ${DEPLOYPATH} -type d -exec /bin/chmod 755 {} \;
-    - /bin/find ${DEPLOYPATH} -type f -exec /bin/chmod 644 {} \;
+      tasks:
+        - export DEPLOYPATH=/home/<username>/public_html  # Add /<app_folder> if required
+        - /bin/cp <file_name> $DEPLOYPATH                 #Copy specific file to destination from root
+        - /bin/cp /<sub_folder>/<file_name> $DEPLOYPATH   #copy specific file from source sub folder
+        - /bin cp * $DEPLOYPATH                           #copy all from root 
+        - /bin cp /<sub_folder>/* $DEPLOYPATH             #copy all from sub folder root
+        - /bin/cp -r * $DEPLOYPATH                        #copy all recursively to $DEPLOYPATH
+        
+        
