--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,11 +1,29 @@
 ---
 deployment:
-      tasks:
-        - export DEPLOYPATH=/home/<username>/public_html  # Add /<app_folder> if required
-        - /bin/cp <file_name> $DEPLOYPATH                 #Copy specific file to destination from root
-        - /bin/cp /<sub_folder>/<file_name> $DEPLOYPATH   #copy specific file from source sub folder
-        - /bin cp * $DEPLOYPATH                           #copy all from root 
-        - /bin cp /<sub_folder>/* $DEPLOYPATH             #copy all from sub folder root
-        - /bin/cp -r * $DEPLOYPATH                        #copy all recursively to $DEPLOYPATH
-        
-        
+  tasks:
+    # Set the deployment path
+    - export DEPLOYPATH=/home/wshaoen/public_html
+
+    # Create backup of existing files (if any)
+    - /bin/cp -R ${DEPLOYPATH} ${DEPLOYPATH}.backup
+
+    # Clean the deployment directory
+    - /bin/rm -rf ${DEPLOYPATH}/*
+
+    # Install dependencies and build the application
+    - /bin/npm install
+    - /bin/npm run build
+
+    # Copy the built files to the deployment path
+    - /bin/cp -R ./dist/* ${DEPLOYPATH}
+
+    # Copy other necessary files
+    - /bin/cp ./index.html ${DEPLOYPATH}
+    - /bin/cp ./src/assets/logos/kobodrop_favicon.png ${DEPLOYPATH}/src/assets/logos/kobodrop_favicon.png
+    - /bin/cp ./src/main.tsx ${DEPLOYPATH}/src/main.tsx
+    - /bin/cp ./src/index.css ${DEPLOYPATH}/src/index.css
+
+    # Set proper permissions
+    - /bin/chmod 755 ${DEPLOYPATH}
+    - /bin/find ${DEPLOYPATH} -type d -exec /bin/chmod 755 {} \;
+    - /bin/find ${DEPLOYPATH} -type f -exec /bin/chmod 644 {} \;
